data viewing and preprocessing scripts

--- a/data_loader.ipynb
+++ b/data_loader.ipynb
@@ -73,7 +73,7 @@
     "    return int(time.mktime(dt_obj.utctimetuple()) + tz*3600)\n",
     "\n",
     "\n",
-    "def load_cites_info(db, data_folder, cites_info_file, overwrite = True, verbosity = 100):\n",
+    "def load_sites_info(db, data_folder, cites_info_file, overwrite = True, verbosity = 100):\n",
     "    filelist = [f for f in os.listdir(data_folder) if os.path.isfile(os.path.join(data_folder, f))]\n",
     "    df = pd.read_csv(cites_info_file)\n",
     "\n",
@@ -169,7 +169,7 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
     "print('Loading cites info...')\n",
