data_loader typos fix

--- a/data_loader.ipynb
+++ b/data_loader.ipynb
@@ -73,11 +73,11 @@
     "    return int(time.mktime(dt_obj.utctimetuple()) + tz*3600)\n",
     "\n",
     "\n",
-    "def load_sites_info(db, data_folder, cites_info_file, overwrite = True, verbosity = 100):\n",
+    "def load_sites_info(db, data_folder, sites_info_file, overwrite = True, verbosity = 100):\n",
     "    filelist = [f for f in os.listdir(data_folder) if os.path.isfile(os.path.join(data_folder, f))]\n",
-    "    df = pd.read_csv(cites_info_file)\n",
+    "    df = pd.read_csv(sites_info_file)\n",
     "\n",
-    "    collection = db['cites']\n",
+    "    collection = db['sites']\n",
     "    if overwrite:\n",
     "        collection.delete_many({})\n",
     "\n",
@@ -100,19 +100,19 @@
     "                prec = -1\n",
     "\n",
     "        site_no = int(tags[1])\n",
-    "        cite_info = df.loc[df['SITE_NO'] == site_no].iloc[0]\n",
-    "        cite = {\n",
+    "        site_info = df.loc[df['SITE_NO'] == site_no].iloc[0]\n",
+    "        site = {\n",
     "            \"site_no\": site_no,\n",
-    "            \"description\": cite_info['STATION_NM'],\n",
-    "            \"lat\": cite_info['DEC_LAT_VA'],\n",
-    "            \"lon\": cite_info['DEC_LONG_V'],\n",
-    "            \"state\": cite_info['STATE_NM'],\n",
-    "            \"district\": cite_info['DISTRICT_N'],\n",
-    "            \"drain_area\": cite_info['DRAIN_AREA'],\n",
-    "            \"status\": cite_info['STATUS_15'],\n",
+    "            \"description\": site_info['STATION_NM'],\n",
+    "            \"lat\": site_info['DEC_LAT_VA'],\n",
+    "            \"lon\": site_info['DEC_LONG_V'],\n",
+    "            \"state\": site_info['STATE_NM'],\n",
+    "            \"district\": site_info['DISTRICT_N'],\n",
+    "            \"drain_area\": site_info['DRAIN_AREA'],\n",
+    "            \"status\": site_info['STATUS_15'],\n",
     "            \"precision\": prec,\n",
     "        }\n",
-    "        collection.insert_one(cite)  \n",
+    "        collection.insert_one(site)  \n",
     "        \n",
     "    return collection\n",
     "\n",
@@ -172,8 +172,8 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "print('Loading cites info...')\n",
-    "cites = load_cites_info(db, data_folder = 'data/', cites_info_file = 'cites.csv', overwrite = True, verbosity = 100)\n",
+    "print('Loading sites info...')\n",
+    "sites = load_sites_info(db, data_folder = 'data/', sites_info_file = 'sites.csv', overwrite = True, verbosity = 100)\n",
     "print('...done')\n",
     "\n",
     "print('Loading measurments data...')\n",
