--- a/data_loader.ipynb
+++ b/data_loader.ipynb
@@ -10,6 +10,7 @@
    "source": [
     "from pymongo import MongoClient\n",
     "import os\n",
+    "import time\n",
     "import pandas as pd\n",
     "import datetime as dt\n",
     "\n",
@@ -89,7 +90,7 @@
     "        if tags[3] == 'web' or tags[3] == 'comp':\n",
     "            continue\n",
     "\n",
-    "        with open(os.path.join(path, f)) as file:\n",
+    "        with open(os.path.join(data_folder, f)) as file:\n",
     "            while file.readline()[0] == '#':\n",
     "                pass\n",
     "            file.readline()    \n",
@@ -139,7 +140,7 @@
     "        gh = list()\n",
     "        qa = list()\n",
     "\n",
-    "        with open(os.path.join(path, f)) as file:\n",
+    "        with open(os.path.join(data_folder, f)) as file:\n",
     "            while file.readline()[0] == '#':\n",
     "                pass\n",
     "            file.readline()        \n",
@@ -159,7 +160,6 @@
     "            \"site_no\": site_no,\n",
     "            \"utc\": utc,\n",
     "            \"gh\": gh,\n",
-    "            \"qa\": qa\n",
     "        }\n",
     "        \n",
     "        code = mc_codes[tags[3]]\n",
