tool for manual reviewing

--- a/data_loader.ipynb
+++ b/data_loader.ipynb
@@ -174,11 +174,17 @@
    "source": [
     "print('Loading sites info...')\n",
     "sites = load_sites_info(db, data_folder = 'data/', sites_info_file = 'sites.csv', overwrite = True, verbosity = 100)\n",
-    "print('...done')\n",
+    "print('...done.')\n",
     "\n",
     "print('Loading measurments data...')\n",
     "measured, verified = load_measurement_data(db, data_folder = 'data/', overwrite = True, verbosity = 5)\n",
-    "print('...done')"
+    "print('...done.')\n",
+    "\n",
+    "print('Creating indexes...')\n",
+    "sites.create_index('site_no')\n",
+    "measured.create_index('site_no')\n",
+    "verified.create_index('site_no')\n",
+    "print('...done.')"
    ]
   }
  ],
