--- a/usgs.ipynb
+++ b/usgs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -43,6 +43,64 @@
    "source": [
     "from nfn import NFN\n",
     "from helpers import Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "PI = np.pi\n",
+    "TAU = 2 * np.pi\n",
+    "\n",
+    "def get_phase(duration, frequency, phase, sampling_rate):\n",
+    "    n = int(duration * sampling_rate)\n",
+    "    w = TAU * frequency / sampling_rate\n",
+    "    return w, (w * np.arange(n) + phase) % TAU"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-40, 440)"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXkAAAEACAYAAABWLgY0AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJztnWuQJFd1538nq6bmKY1GII3GpRcSBiysXSHQBJJY1DAG\npJEt4YAF5PDasBG0woZgY9eBMbsQmvmy4AiHwTLY0KwWAxtaPjhijR5g69l4JfEYGL0APUbGSJqS\nNFrQjISk6e6qrrMfKrtV6qns6aGq+/6VeX4RFVOVeafz1smb/zp5zrk3zd0JgiAIykmWugNBEATB\n8hEiHwRBUGJC5IMgCEpMiHwQBEGJCZEPgiAoMSHyQRAEJWYkIm9mV5nZPjO7p2D/BWZ2wMx2569P\njOK4QRAEweLUR/R3vgz8NfDVRdr8s7tfMqLjBUEQBEtgJJ68u98G7D9MMxvFsYIgCIKls5Ix+XPN\n7C4zu97MzljB4wZBEFSWUYVrDscPgZPd/Xkzuwj4B+BVK3TsIAiCyrIiIu/uz/a9/5aZ/Y2ZHevu\nTy1sa2axmE4QBMER4u4DQ+KjDNcYBXF3M9vc934rYIMEfg53X5HXFVdcsWLHeim9wi5hl7DLS8sm\nizEST97MrgbGgJeZ2SPAFUCjp9c+AbzbzP4IaAMHgfeO4rhBEATB4oxE5N399w6z//PA50dxrCAI\ngmDpVHrG69jYWOouSBJ2GUzYZTBhl0NRsokdLp6z0piZq/UpCIJAGTPDVyDxGgRBEIgRIh8EQVBi\nQuSDIAhKTIh8EARBiQmRD4IgKDEh8kEQBCUmRD4IgqDEhMgHQRCUmBD5IAiCEhMiHwRBUGJC5IMg\nCEpMiHwQBEGJCZEPgiAoMSHyQRAEJSZEPgiCoMSEyAdBEJSYEPkgCIISEyIfBEFQYkLkgyAISkyI\nfBAEQYkJkQ+CICgxIfJBEAQlJkQ+CIKgxITIB0EQlJgQ+SAIghITIh8EQVBiRiLyZnaVme0zs3sW\naXOlme0xs7vM7KxRHDcIgiBYnFF58l8G3lG008wuAk53918HLge+MKLjBkEQBIswEpF399uA/Ys0\nuRT4at72e8BGM9s8imMHQRAExaxUTL4JPNr3uZVvS0Kr1eLfn3ce367VeMqM6fw1s+DfA7/iviP5\n/z83483r17Nt2zZarVYqk7zILneYMbVM33ep+54y49urVnH3N7+Z1CZzdnn/mWfy89wuy/F9l9rm\n52Z84Mwzk48VgB/84AecsXEjN+fnayXHx6DrSMUucrj7SF7AKcA9BfuuBc7r+3wTcHZBW19utm/f\n7teBu8jrCXDAt2/fvuzf/aVkFwe/odFIapM5uzwhYIv+8ZJ6rLi7/+amTWEXEXLdZNCrvkK/JS3g\npL7PJ+bbBrJjx47592NjY4yNjY20M8cePMgbRvoXh+MYYEvqTgTBEfKXzz1HxFzTMDk5yeTk5JLa\nWu9HYHjM7FTgWnc/c8C+7cCH3P1iM3sj8Fl3f2PB3/FR9amIg9u2sfaWWwCYoedGA1j+fu7fg8Da\nX2HfUv//UUAt33/7Mcdw6o9+RLOZLIpFq9XiD7Zt4+8feID1jP77Hsm+DLgbWHX99fzb7duX4+su\nmVarxQfOPJNv7d9Ph+X5vkttswp4x4YNfPn++5OOFYAD55/PMXfcAcB03/aVGB/9+9bRu47euWUL\nX9i1K7ldUmBmuLsN3Fnk4h/JC7gaeIzeuX4E+AC9KprxvjafAx6id+0ODNXk7ZbxpiZn+/YXbvMu\nvHD5j7eEfjzz5jen60cf119/vT+2dq37nj1J+zF93nl+6caNSfvQz0c/+lGfWr3a/cCBpP2Y2rDB\n/+MllyTtwzx79/quo47yTqPhvndvun50Oj6TZf63n/1suj4khuUO17j77y2hzYdHcayRMDEB4+M9\nef3Sl9L244IL+Omjj9K+4gpena4n8/jsLC+fnobU3tCqVaxa5ju6I8G7XVbNzMD69Un70Vm7ljXt\ndtI+zNNs8t9POYWrn36aWsrxUqvx9Pr1rN+/WIFfdanmjNdmE66/Hr75zbRi1mzCZZdx/caNzBx3\nXLp+zNFqcc4nP9n78XvqqbR9aTSod7tp+9BHbWaG2VoN6iuVxhpMZ80aVs/MJO1DP7XZWTyxTWi1\nWDszw2/93d9BVNccQjVFXolajTrMharSMj7O8Xff3fOgx8eTdsUbDSlPvjEzQ3v16tTd0PLkgVq3\ni69albYT4+Osn55my8MPJx+3ioTIp6Zep9ZLmqTuiRQWIj+Qzrp1rBUS+Xq3m96TDxYlRD41tRo1\nRDz5iQn2n346BxqNXr4gJWIiv2p6WkPkxTz5uoInPzHBUxs28PMTTkg/bgUJkU+Nksg3m9z33vfy\nL5s2pU+8iol8o92m3Wik7gaddeu0RN4dUot8s8lPTjuNe849N/24FSREPjW1GjV3uiJJRu92kZDW\nRqMnICI0RDz5WTFPXiLxCniWgcg1pEaIfGqUEq8A3S5ug+dUrChqnvzMDO01a1J3oxeT73RSd2Oe\nujsucIfjZr2qsOAQQuRTU6/rhGugJ/KZwLBYvZqGik3oiXxHwZNft441SiLf7SYvKwUgPPlCBK7m\niqMUkwcZT16tumZ1u53ek2+1aN5yC//uscdk6sHr3a6EJ48ZJjRelAiRT42gyEugJPKtFhfcey8n\n/eQnacV1fJyjH3mEzVNTMvXgEolX8nCNytgVI0Q+NbUaGWglXgU8eSmRHx9ny4EDbPzFL2TEVQWJ\nEkqAEPlCQuRTU6v1klcqgiYi8rZmDQLSocXEBE+ffjq/UJjHkFPrdjU8+SyLxGsBIfKpEQzXKCRe\nTSnxOjHBk0cdxf7Nm9OKa7PJzy67jB8fc4xMPfgqkXBNJF6LEUiLVxzF6hoBT55GQ8eTbzbZfeqp\nHPuqV7E1sbiaWIJRpYQyEq/FpHfZqk4ek5cReZF+SHnygLlL3OGg0Ic+6irhmojJFxKefGoEZ7xK\nCImSJw89AVG4w8kyTGSsgE51TYRrihG4miuOWEzeRMI1tno16acevYC5S/z4WZaR/uy8QL3bBYFw\njUe4ppD0o7bq5J68isireKy2ejUNdH78cMcURL5WkxIzlcSrhSdfSPpRW3Xqda2YvIgnT6MhJfLm\nLvHjp5ZgXOUu48mr5JPUCJFPTXjygxETeUTCNRJ96KMuIvJkmdSPnxJaI6aKxIzXwTQarEbHLioi\nb2JippJ4jeqaYtKP2qqjNuPVXUbklTx5mXBNlpGJ2AS0PPkI1wwmRD41YnXyJlRC2VB69q071Gqp\ne4EJ9KEflZi8WmmpEgJXc8WJmPxgBD15U7CLWOK1oSLyYnZRIkQ+NVFdcyitFvzxH3OSOy6ybrpM\nnbxYCWXdHVMQ+QjXFJJ+1FadWo1MacarQkx+fBwmJ1kPrPrQh9L2ZQ6VmLyYx6pSJx/PeC0mRD41\nYuEaE1mFch4Ru8hU1yjF5Fstzup0WP8Xf5H+SVViP35KpB+1VUdsWQOJmPzEBGzbxjQwdeWVafuS\nY0KJV5nqmvFxXubOqjvvTP8wlQjXFBIin5r8opUReYWwRLMJV1/NL83obtmSti85UonX1H1QJKpr\nChmJyJvZhWZ2v5k9aGYfG7D/AjM7YGa789cnRnHcUiAm8jLhmnwhLhm7CIVrZMISExMcANrnnJP+\nSVURrilk6KWGzSwDPgdsAx4DdpnZN9z9/gVN/9ndLxn2eKWjXtdbaljBY80yqZnAEnc4oOXJN5v8\nS5bxqk99ilWpn1SVZTIOgRqjcE22Anvc/WF3bwNfBy4d0E5mbEoh5snLzHg1k7JLePKDMUSSwWLL\nPSgxilHbBB7t+7w337aQc83sLjO73szOGMFxy4FgdY2CmJFlmNCMV3OXEDOr1aS8pQwklmCOmHwx\nK/VkqB8CJ7v782Z2EfAPwKuKGu/YsWP+/djYGGNjY8vdv3SILWsgUV0D82u0qNhFae0aJY81PPk0\nTE5OMjk5uaS2oxD5FnBy3+cT823zuPuzfe+/ZWZ/Y2bHuvtTg/5gv8iXHrFwjQmFa5QSr4DEHY7a\nk6EykTscr5jIL3R+d+7cWdh2FKN2F/BKMzvFzBrA+4Br+huY2ea+91sBKxL4ylGva814VQrXoJN4\nNZUnQ4mJmYHEHY7FUsOFDO3Ju/usmX0YuIHej8ZV7n6fmV3e2+0TwLvN7I+ANnAQeO+wxy0NYp68\nVOIVIU9eJPGKmCcf4Rp9RhKTd/d/BF69YNsX+95/Hvj8KI5VOiLxOhixOvlMxZMXq67J3MnqK5Xa\nW6wjMeO1iPSjtuoIevIKt99zdfJSdlEQ+dwuKmQgM16UfvyUUBov1URM5GVmvIqFaww0RF7Mk4cI\n16iTftRWHcGlhmU8M7QSrwoiLzXjlbxOXkTkI1wzGIFRW3HmPHkVMVPz5EXsglJMPnUn+pCaDBUi\nPxCBs1NxzOiawexs6p4AOqWCc3cTKiIvk3gVEzMDicSrml2USD9qAymRl5nxCsyiI/KARLjG8hnS\nKqiEa6o2GepIUBovlUVJ5GVmvAJdwIXsoiLyKmLm7jrVNWYRky8g/agNpETeRcQMwIFup5O6G4BW\nGEtAUoFeUlyl6ihi8sUInJ2gm2UyIi+TeIXeHYXIhSvlyafuRM68Jy9glxD5YtJnTIKeJx8e6yFI\nhWvQqCLJajWZHz6lcI1SGEuN9KM2oGumsxa2Sp08vXCNjMiLrLYo4TXnuHuEa14CCJydwIVi8rjr\nhGvQqa6RWW1RqLpGKVwTJZTFRLhGgG6W4SrhGqESyq6ZlCcvI2apO5HT7XZlwjUx47WYEHkB5MI1\nAmIGEa4Z2A+xmHyEa/QRODsVp9Viw8GDvOWrX4VW6/DtlxmZpYbpibyKoKkkXpU8eaVwzdzyIMGh\nCJydijM+zurZWU586CEYH0/dG51nmdLLVYQnv6AfiiWUAuMlYvLFRLgmeDFC4Rq1EkoJMRMTeZlw\njVmIfAECZ6fiTEwwVa+z97TTYGIidW+kRN7NZKprcAcFTz7LZMIS84lXhfGi0AdRwjKpaTbZf/TR\n3Pqud0Gzmbo3vbVrRC4YpcSryiqUCj80cyiFayLxWkyEawToZpnMk+at29UQM3KRF7lwVcISmdDj\n/5TCNTHjtZgQeQHcTEfkhRKvSgu3GUh40WoxeZlwTVTXFCJwdgKlhbikYvIIzXgV+fGTnPGqYJcI\n1xQSnrwCQh6rlMgrlVCChicvFK6RWmo4qmsKCZEXQC5co3DRkpdQhl1e3I8I1wxGaJKYGgJnJ3Cl\nxKuImAFSdzgqj7nLIlwzkKxeD0++AJXxUmnCkx9MePID+qHkyc+dGwGRD0++mPSjNpASean15IXs\nIrN2jZInPzuLxn0WUSe/CCrjpdooiZmIxwpak6Fk1q5RSrx2OsjIaoh8ISMZL2Z2oZndb2YPmtnH\nCtpcaWZ7zOwuMztrFMctC1Ieq9IqlELLGsisXTN3bgQEzbtdNM5OfocjYBNFhr6azSwDPge8A3gt\ncJmZvWZBm4uA093914HLgS8Me9wyoZZ4VfBYQezHj15yLzVZlvWEVcAuPjurI/IRky9kFC7bVmCP\nuz/s7m3g68ClC9pcCnwVwN2/B2w0s80jOHY5EKrxVZn0A1rhmkxlgTKznrAqjBehp4jFsgbFjELk\nm8CjfZ/35tsWa9Ma0KayKHmsgFS4RkLMyBOvAoJmZr04uMB4UQrXRHVNMenvPwewY8eO+fdjY2OM\njY0l68tK4Fkm47FG4nUwhkad/Jwn77OzyUWt2+loibyIQ7ASTE5OMjk5uaS2oxD5FnBy3+cT820L\n25x0mDbz9It8FXChZ7xKibzQsgYySw3zwvyB1CLv3a5MdU3VEq8Lnd+dO3cWth3FqN0FvNLMTjGz\nBvA+4JoFba4B/gDAzN4IHHD3fSM4djkQi8kreKygFa4BDU8ehO5wut3eORJAaZKYGkN78u4+a2Yf\nBm6g96NxlbvfZ2aX93b7hLt/08y2m9lDwHPAB4Y9bplQq65RSaapxJ5BZ1kD0JkJLFddI+QQKDGS\nmLy7/yPw6gXbvrjg84dHcawyIifyImImFa5BY8Yr6HjyPjsrE66JxGsxGqO26ihV1wjFnpUmQykt\nwdwFugoiLxauqVJM/kjQGLUVR6mEUirxCjJ2UfLk56prUqMUrglPvhiNUVt1hOKJmVjiVcWTV5nx\nCjrhGoSqa7J6PTz5AkLkBZCLyYvcgivd4ch58gJ2UQrXhCdfjMaorTpCJZSATLgGkBF5lclQoOPJ\nK4VrlFbnVCPsIoBUWEIpJh92GYjKA84VfmjmyTKpORVKaIzaiuNZpjXjVcRj7Ua4ZiBdkdJSn53t\nnSMBlB6mokbYRQEhLyRzJxMReaXS0ki8DsBdJvEaq1AWEyKvgNraNSLemVK4RsqTRydco5J4DU++\nmLCLAC7kyQM6sWcxT14l8QoaIo/QUsNWq6FzdrTQuJqrjpKYCdXJg0hYArG1a0Ri8l0lT17osYhq\nhMgLoJR4zZSqSIRWoawhFq4REHmlyVDzT8wSuY6U0Bi1VUdoxqtSWEImXJOfG5WEtEriVSkmP//s\nW5HrSIkQeQXUEq8iHqtMGCsXDhVP3kFDzJSqa4Qei6iGxqitOF6ryQxOQ0fMuma4iJjNovGMV9BZ\nglnJkzczqXkVSmhczVVHKPYs58kLiNlc7FlF5GWWGhZaTz5i8sWIXM0VRyjxqiTyMjH5vFRQReRV\nwhLe7erMeA2RL0Tjaq46QonXDJ2ZnQiFa7r0knsKqIRrlJ7xmmWZzI+fGhqjtuIoTYZSm/EqcdEK\nhmtUJkOpYGZSJbdKhMgroFRdQ5RQHtoRlwrXABJ2iXDNS4MQeQXUPHmhsITERavmyZvpJF5FbBIi\nX4zG1Vxx1Ga8qnjygMZFK+bJy8SeY8brS4IQeQFMKPGqFK4hyyQSr3NPQJIReZHVOZUe/7fqySfZ\n0O3CZZdBq5W6O1KEyAvgSiLvLjMZykVyFUr14KCzrIFSdc3LPv5xVgPcfDOMj6fujhQaV3PVUYrJ\nQ8TkF/ZDaEld0LGLRB/mEPmxUUTjaq46Ih4rrRaNbpczPvlJjVtekbBEt9OR8uS7QFfALkrVNfs/\n/WkOArzlLTAxkbo7UoTIK6DiyY+PUwM2ff/7Ere8Kh6rmicPSCz3oFRd47/2a+yr1eBLX4JmM3V3\npAiRV0AoJi+FisiLxeS7Inc4CudmjizL6AB0Oqm7IsdQIm9mm8zsBjN7wMz+ycw2FrT7mZndbWZ3\nmtn3hzlmKVEpofziFwHYf+65Ere8KjMY56prVFC5w8FdxpM3M2YhRH4Aw3ryfwbc5O6vBm4BPl7Q\nrguMufvr3H3rkMcsH1nWeyJTajZvpmPGg5/5jMQtr2eZhJi5UD045NU1AnZRqq4xMzpmIfIDGFbk\nLwW+kr//CvDOgnY2gmOVF5WYfKdDB516cEBD5MXCNSoLlCnF5M2Mjju026m7Isewwnu8u+8DcPcn\ngOML2jlwo5ntMrMPDnnM0uG1mka4pt1m1kxG5FUWblOqIgGdGa9Kk6HCky/msGvKmtmNwOb+TfTG\n2ScGNC+6Is9398fN7Dh6Yn+fu99WdMwdO3bMvx8bG2NsbOxw3XxJIzPjtdOhYyazpG4kXgejMuNV\nKVxTtcTr5OQkk5OTS2p7WJF397cV7TOzfWa22d33mdkJwJMFf+Px/N//Z2b/B9gKLEnkK4GQyCt5\n8jIiL1ZCqeLJS/Qhx8wqJfILnd+dO3cWth3WZbsGeH/+/g+BbyxsYGbrzGxD/n498HbgR0Met1wo\niTw6MXmVcI3SQlygE5NXq66pksgfCcOK/J8DbzOzB4BtwKcBzGyLmV2Xt9kM3GZmdwLfBa519xuG\nPG65UBH5dpuOkicPEt5it9ORETPQqa6RTLyGyB/CUM95c/engN8asP1x4Lfz9/8KnDXMcUqPisjn\nMXkVkVdZglkuXCMSxlKKyYcnX4xIhq3i1Go6Io/Os0xRmQylIKh9qCReXehRkVVLvB4JIldzxVHx\n5MVKKDHTsItaCWV48ocQnnwxIfICSJVQopV4VXpoiBQh8i/CzGhDiPwAQuQVUKkiEYvJy5RQitXJ\nqyxQJjcZKhKvAwmRVyA8+cGIrLOvtnYNaDwZysREPjz5wYTIK1CraSxQlpdQyiReRe5wlEoFQWd1\nTrpdqcRriPxgRK7mahMx+cGoJBjdXcqTl7GLmCcfidfBhMgrICTySjNeZaprBD15hXCNWuI1YvKD\nCZFXQEXk220pT54sk0gwdpWqa1ot/s0zz9D82tfSP4dXKFxjZrRD5AcSIq+AykNDOh3aQtU1ruLJ\nKyVex8d5ebvNUQ89lP45vLF2zUuCEHkBrF7XEDOxGa+m8GSoVotjdu7kFZ1Oes9ZDSFPPhKvxWhc\nzVVHJVyjmHhNbZfxcdbs3s1G9/SeM8DEBPsaDZ59xSvSP4dXSOTDky8mRF6BLEPiUhGMyUv8+CnR\nbHL7ccfx2MUXp38Or1C4BqADeDz+7xBC5BVQEbNOhzZCIq9QKjgxwdSZZ/KLLEvvOee0swybnk7d\nDbn5A7OEyA8iRF4AE1qFUqmEUiJc02yy//LL+eGaNek955yZWo1sZiZ1N3rnRmSsAPGM1wJC5AUw\noRmvbXQSr9Rq6UUesOlpZlRsAnRqNUxB5Lvd3tO7RJg1w0PkD0HnDFUZoXCNVExeZO0aDh5kSkjM\nZrKMTCBcoxaTnwWIcM0h6IzcKqOSeBUUeQlPfmqKaRWbAG2RcI0JVddAz5OPcM2hhMgroOLJt9u0\n3UPkF3LwINNCnnxbJFzjYiLfMYvE6wB0Rm6FkYnJq1XXiDzj1aan5US+phCuEVq7BvJwTXjyh6Az\nciuM1WpS4RqZxKvIUsM2NSWVeJUJ14hV13SzLBKvA6in7kCATrhGKSbfanHWd75D/fnne8sJJCxf\ntKkpOU8+uci3WrzmjjuYnZpKfn7miBLKweiM3AojE67JSyglRH58nOP27WPTL3+ZfDkBuXBNvZ5e\n5MfHOfbJJznumWeSn585orpmMDojt8oIVddIJV5FsKkppmu11N2YR8KTFySqawYTIi+AjCevFK6Z\nmODxk07i2TVrki8noDYZql2rkaX2WCcmOLBpE49v2pT8/MwRIj8YnZFbYWREvt1mBpHEa7PJ5Hve\nw/6jjkoe782mpmgLefIdhXBNs8njp53GLeeck/z8zBGJ18EIXM0Vp9Wi+alPsWVmJv165Z0OHaFw\nzfT69aybmkrdDbmYfKdep5Za5IE1zz3H8+vWpe7GPOHJD0Zn5FaV8XE27N7NeoX1ypXCNeiIfKYY\nk08drqEn8s+tXZu6G/OEyA9mKJE3s3eb2Y/MbNbMzl6k3YVmdr+ZPWhmHxvmmMEyIpZ4ba9dS2N2\nFhJ7rWoxeRVPfm148i8Jhh259wK/C3y7qIGZZcDngHcArwUuM7PXDHnc8jAxwS/f9KZe+ddnPpO2\nL+02M0Iib1nG840G7N+fth/T08yoefIh8i+m1eITzz9P/cc/Th/2FGMokXf3B9x9DyxaAbgV2OPu\nD7t7G/g6cOkwxy0VzSZ7JyZ4YPVqOHAgXT9aLbj5Zj7S6ZA98US6fvSx4emnWdXpwHvek+7CbbVY\n/dhj/Okjj8iIx9EzM9Tbbbj44jR9arXgootoTE+zRiBsBMD4OOd0OmRPP50+7CmG+QiqOszsVuBP\n3H33gH3vAt7h7uP5598Htrr7Rwr+lo+iTy8VWq0W4xdfzFV3383LgC5wEJiLdBrgff8utm8pbYr2\n1fIXwHeOPZaT77mHZsKqiVarxb+edhpvyj3W/pVaRvF9l2pLAxp5mwPnnccxt98+yq95xLRaLR46\n+WQuyNf0maX32LvlHh/9++q8MFb+b6PBaT/9adKxAnDg/PM55o47gCOzyXLsu3/DBo6/9Va2vOEN\ny/BNB2NmuPtgZ9vdF30BNwL39L3uzf/9nb42twJnF/z/dwETfZ9/H7hykeN5ldi+fbtf11uhReZ1\nHfj27duT2+UJAVv0v25oNJLaRNEuTwiMFXf339y0Scou3zvuuBX9/rluMuh12LVr3P1tQ/3EQAs4\nue/zifm2Qnbs2DH/fmxsjLGxsSG7ECyVfcAHgdel7gg9b2Jz6k7k7AP+y/r13Ju6I2jZRcEeAPvq\ndX4AXJy6IyvE5OQkk5OTS2tcpP5H8qLnyb++YF8NeAg4hd6d713Abyzyt5b3J0+MvXv3+rvPPddv\nBz8IPgW+P/93Cnx6wb+L7VtKm8X23W7mZ2zc6G9961t97969ye3yO2ef7TeBPwn+1K/4nYa15S/A\nbwI/Y+NG37VrV1KbLLTLzwf0fznHR/++Obtc8vrXJx8r7u67du3y3zj6aP9233W0nONjsX13bdjg\nj63wWMl1c6CmDhWTN7N3An8NvBw4ANzl7heZ2RbgS+7+23m7C4G/opfovcrdP73I3/Rh+hQEQVA1\nFovJjyTxOkpC5IMgCI6MxUReZ4ZHEARBMHJC5IMgCEpMiHwQBEGJCZEPgiAoMSHyQRAEJSZEPgiC\noMSEyAdBEJSYEPkgCIISEyIfBEFQYkLkgyAISkyIfBAEQYkJkQ+CICgxIfJBEAQlJkQ+CIKgxITI\nB0EQlJgQ+SAIghITIh8EQVBiQuSDIAhKTIh8EARBiQmRD4IgKDEh8kEQBCUmRD4IgqDEhMgHQRCU\nmBD5IAiCEhMiHwRBUGJC5IMgCEpMiHwQBEGJCZEPgiAoMUOJvJm928x+ZGazZnb2Iu1+ZmZ3m9md\nZvb9YY4ZBEEQLJ1hPfl7gd8Fvn2Ydl1gzN1f5+5bhzzmyJicnEzdBUnCLoMJuwwm7HIoSjYZSuTd\n/QF33wPYYZrasMdaDpROhBJhl8GEXQYTdjkUJZuslPA6cKOZ7TKzD67QMYMgCCpP/XANzOxGYHP/\nJnqi/d/c/dolHud8d3/czI6jJ/b3ufttR97dIAiC4Egwdx/+j5jdCvyJu+9eQtsrgF+6+18W7B++\nQ0EQBBXD3QeGzQ/ryR8BAw9gZuuAzN2fNbP1wNuBnUV/pKijQRAEwZEzbAnlO83sUeCNwHVm9q18\n+xYzuy4mHGjxAAAC/ElEQVRvthm4zczuBL4LXOvuNwxz3CAIgmBpjCRcEwRBEGgiV9a4UpjZhWZ2\nv5k9aGYfS92flcTMrjKzfWZ2T9+2TWZ2g5k9YGb/ZGYb+/Z93Mz2mNl9Zvb2NL1eXszsRDO7xcx+\nbGb3mtlH8u1Vt8tqM/tePpHx3jynVnm7AJhZZma7zeya/LOmTdy9ci96P24PAacAq4C7gNek7tcK\nfv83AWcB9/Rt+3PgT/P3HwM+nb8/A7iTXv7m1Nxulvo7LINNTgDOyt9vAB4AXlN1u+TfdV3+b41e\nyHVr2MUB/jPwv4Br8s+SNqmqJ78V2OPuD7t7G/g6cGniPq0Y3itf3b9g86XAV/L3XwHemb+/BPi6\nu3fc/WfAHnr2KxXu/oS735W/fxa4DziRitsFwN2fz9+upidUTsXtYmYnAtuB/9G3WdImVRX5JvBo\n3+e9+bYqc7y774Oe4AHH59sX2qpFyW1lZqfSu9P5LrC56nbJwxJ3Ak8AN7r7LsIunwE+Su8Hbw5J\nm1RV5IPDU8mMvJltAP4e+E+5R7/QDpWzi7t33f119O5stprZa6mwXczsYmBffue3WMm3hE2qKvIt\n4OS+zyfm26rMPjPbDGBmJwBP5ttbwEl97UprKzOr0xP4r7n7N/LNlbfLHO7+DDAJXEi17XI+cImZ\n/RT438BbzexrwBOKNqmqyO8CXmlmp5hZA3gfcE3iPq00xou9kGuA9+fv/xD4Rt/295lZw8xeAbwS\nKOty0f8T+Im7/1XftkrbxcxePlclYmZrgbfRy1dU1i7u/l/d/WR3P42edtzi7v8BuBZFm6TOUCfM\njF9Ir4JiD/Bnqfuzwt/9auAxYBp4BPgAsAm4KbfJDcAxfe0/Tq8i4D7g7an7v0w2OR+YpVdpdSew\nOx8jx1bcLmfmtrgLuIfemlVU3S593/UCXqiukbRJTIYKgiAoMVUN1wRBEFSCEPkgCIISEyIfBEFQ\nYkLkgyAISkyIfBAEQYkJkQ+CICgxIfJBEAQlJkQ+CIKgxPx/waabA7lOteMAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7f01f4665470>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "w, t = get_phase(1, 440, 0, 44100)\n",
+    "c = 2.0\n",
+    "\n",
+    "k = 400\n",
+    "y = np.sign(np.sin(t[1:k]))\n",
+    "z = np.tanh(c / w * np.sin(t[1:k]))\n",
+    "plt.plot(y, 'k.-')\n",
+    "plt.plot(z, 'r.-')\n",
+    "plt.ylim(-1.5, 1.5)\n",
+    "plt.xlim(-k // 10, k + k // 10)"
    ]
   },
   {
