--- a/preproc.ipynb
+++ b/preproc.ipynb
@@ -39,22 +39,6 @@
    },
    "outputs": [],
    "source": [
-    "to_shift = {\n",
-    "    14137000 : -687,\n",
-    "    7377500  : +2,\n",
-    "    8186500  : +2,\n",
-    "    11456000 : +2\n",
-    "}\n",
-    "\n",
-    "to_skip = {\n",
-    "    14178000: 1,\n",
-    "    50136400: 1,\n",
-    "    50075000: 1,\n",
-    "    50065500: 1,\n",
-    "    9481740:  1\n",
-    "}\n",
-    "\n",
-    "\n",
     "def align_measurements(t_meas, y_meas, t_corr, y_corr):\n",
     "    dt_corr, n_corr = np.unique(t_corr[1:] - t_corr[:-1], return_counts=True)\n",
     "    dt_meas, n_meas = np.unique(t_meas[1:] - t_meas[:-1], return_counts=True)\n",
@@ -80,6 +64,21 @@
     "\n",
     "\n",
     "def get_data(db, site_id):\n",
+    "    to_shift = {\n",
+    "        14137000 : -687,\n",
+    "        7377500  : +2,\n",
+    "        8186500  : +2,\n",
+    "        11456000 : +2\n",
+    "    }\n",
+    "\n",
+    "    to_skip = {\n",
+    "        14178000: 1,\n",
+    "        50136400: 1,\n",
+    "        50075000: 1,\n",
+    "        50065500: 1,\n",
+    "        9481740:  1\n",
+    "    }\n",
+    "    \n",
     "    data_m = db['measured'].find_one({'site_no': site_id})\n",
     "    data_c = db['corrected'].find_one({'site_no': site_id})\n",
     "    \n",
@@ -132,7 +131,7 @@
     "    return cm\n",
     "\n",
     "def mark_anomaly(y_m, y_c, anomaly_thresh):\n",
-    "    return np.logical_and(y_c > 0, np.abs(y_c - y_m) > anomaly_thresh)"
+    "    return np.logical_and(y_m > 0, np.abs(y_c - y_m) > anomaly_thresh)"
    ]
   },
   {
