cython bug fixes, filters

--- a/data_loader.ipynb
+++ b/data_loader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -13,51 +13,15 @@
     "import time\n",
     "import pandas as pd\n",
     "import datetime as dt\n",
+    "import multiprocessing as mp\n",
     "\n",
-    "client = MongoClient(\"localhost\", 27017)\n",
+    "client = MongoClient(\"localhost\", 27017, client= False)\n",
     "db = client['usgs']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "qa_codes = {\n",
-    "    'A': 0,\n",
-    "    'P': 1,\n",
-    "    'R': 2,\n",
-    "    'W': 3\n",
-    "}\n",
-    "\n",
-    "tz_codes = {\n",
-    "    'AKDT': -8,\n",
-    "    'AKST': -9,\n",
-    "    'AST' : -4,\n",
-    "    'CDT' : -6,\n",
-    "    'CST' : -5,\n",
-    "    'EDT' : -4,\n",
-    "    'EST' : -5,\n",
-    "    'GST' : -2,\n",
-    "    'HST' : -10,\n",
-    "    'MDT' : -6,\n",
-    "    'MST' : -7,\n",
-    "    'PDT' : -7,\n",
-    "    'PST' : -8,\n",
-    "}\n",
-    "\n",
-    "mc_codes = {\n",
-    "    'meas': 'measured',\n",
-    "    'comp': 'corrected'\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -117,29 +81,18 @@
     "        \n",
     "    return collection\n",
     "\n",
-    "        \n",
-    "def load_measurement_data(db, data_folder, overwrite = True, verbosity = 100):\n",
-    "    filelist = [f for f in os.listdir(data_folder) if os.path.isfile(os.path.join(data_folder, f))]\n",
-    "        \n",
-    "    if overwrite:\n",
-    "        db[mc_codes['meas']].delete_many({})\n",
-    "        db[mc_codes['comp']].delete_many({})\n",
     "\n",
+    "def load_data_worker(measured, computed, filelist, data_folder):\n",
+    "    tz_codes = {'AKDT': -8, 'AKST': -9, 'AST' : -4, 'CDT' : -6, 'CST' : -5, 'EDT' : -4, 'EST' : -5, 'GST' : -2, \n",
+    "                'HST' : -10, 'MDT' : -6, 'MST' : -7, 'PDT' : -7, 'PST' : -8}    \n",
     "    for i, f in enumerate(filelist):\n",
-    "        tags = f.split('.')    \n",
-    "        \n",
-    "        if i % verbosity == 0:\n",
-    "            print(i, f)\n",
-    "            \n",
-    "        if tags[3] == 'web':\n",
+    "        tags = f.split('.')            \n",
+    "        if tags[3] != 'meas' and tags[3] != 'comp':\n",
     "            continue\n",
-    "\n",
     "        site_no = int(tags[1])\n",
-    "\n",
+    "        \n",
     "        utc = list()\n",
     "        gh = list()\n",
-    "        qa = list()\n",
-    "\n",
     "        with open(os.path.join(data_folder, f)) as file:\n",
     "            while file.readline()[0] == '#':\n",
     "                pass\n",
@@ -150,30 +103,84 @@
     "                val = line.split('\\t')\n",
     "                ts = parse_datetime(val[0], val[1], tz_codes[val[2]])\n",
     "                utc.append(ts)\n",
-    "                gh.append(float(val[3]))\n",
-    "                qa.append(qa_codes[val[7][0]])\n",
+    "                gh.append(float(val[3]))        \n",
+    "        if len(utc) < 2 or len(gh) < 2:\n",
+    "            continue            \n",
+    "        measurement = {\"site_no\": site_no, \"utc\": utc, \"gh\": gh} \n",
+    "        if tags[3] == \"meas\":\n",
+    "            measured.insert_one(measurement)\n",
+    "        else:\n",
+    "            computed.insert_one(measurement)        \n",
+    "    return\n",
+    "\n",
     "        \n",
-    "        if len(utc) < 1 or len(gh) < 1 or len(qa) < 1:\n",
-    "            continue\n",
-    "            \n",
-    "        measurement = {\n",
-    "            \"site_no\": site_no,\n",
-    "            \"utc\": utc,\n",
-    "            \"gh\": gh,\n",
-    "        }\n",
+    "def load_measurement_data(db, data_folder, n_jobs = 4, overwrite = True, verbosity = 100):\n",
+    "    filelist = [f for f in os.listdir(data_folder) if os.path.isfile(os.path.join(data_folder, f))]\n",
     "        \n",
-    "        code = mc_codes[tags[3]]\n",
-    "        db[code].insert_one(measurement)\n",
+    "    if overwrite:\n",
+    "        db['measured'].delete_many({})\n",
+    "        db['computed'].delete_many({})\n",
+    "        \n",
+    "    n = len(filelist)\n",
+    "    k = n // n_jobs\n",
+    "\n",
+    "    jobs = list()\n",
+    "    for i in range(n_jobs):\n",
+    "        chunk = filelist[i*k:min((i+1)*k, n)]\n",
+    "        p = mp.Process(target = load_data_worker, \n",
+    "                       args   = (db['measured'], db['computed'], chunk, data_folder))\n",
+    "        jobs.append(p)\n",
+    "        p.start()   \n",
+    "    \n",
+    "    for job in jobs:\n",
+    "        job.join()\n",
     "    \n",
     "    return db['meas'], db['comp']"
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading sites info...\n",
+      "...done.\n",
+      "Loading measurments data...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/dmtlevin/anaconda/lib/python3.5/site-packages/pymongo/topology.py:143: UserWarning: MongoClient opened before fork. Create MongoClient with connect=False, or create client after forking. See PyMongo's documentation for details: http://api.mongodb.org/python/current/faq.html#using-pymongo-with-multiprocessing>\n",
+      "  \"MongoClient opened before fork. Create MongoClient \"\n",
+      "/home/dmtlevin/anaconda/lib/python3.5/site-packages/pymongo/topology.py:143: UserWarning: MongoClient opened before fork. Create MongoClient with connect=False, or create client after forking. See PyMongo's documentation for details: http://api.mongodb.org/python/current/faq.html#using-pymongo-with-multiprocessing>\n",
+      "  \"MongoClient opened before fork. Create MongoClient \"\n",
+      "/home/dmtlevin/anaconda/lib/python3.5/site-packages/pymongo/topology.py:143: UserWarning: MongoClient opened before fork. Create MongoClient with connect=False, or create client after forking. See PyMongo's documentation for details: http://api.mongodb.org/python/current/faq.html#using-pymongo-with-multiprocessing>\n",
+      "  \"MongoClient opened before fork. Create MongoClient \"\n",
+      "/home/dmtlevin/anaconda/lib/python3.5/site-packages/pymongo/topology.py:143: UserWarning: MongoClient opened before fork. Create MongoClient with connect=False, or create client after forking. See PyMongo's documentation for details: http://api.mongodb.org/python/current/faq.html#using-pymongo-with-multiprocessing>\n",
+      "  \"MongoClient opened before fork. Create MongoClient \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "...done.\n",
+      "Creating indexes...\n",
+      "...done.\n"
+     ]
+    }
+   ],
    "source": [
     "print('Loading sites info...')\n",
-    "sites = load_sites_info(db, data_folder = 'data/', sites_info_file = 'sites.csv', overwrite = True, verbosity = 100)\n",
+    "#sites = load_sites_info(db, data_folder = 'data/', sites_info_file = 'sites.csv', overwrite = True, verbosity = 100)\n",
     "print('...done.')\n",
     "\n",
     "print('Loading measurments data...')\n",
@@ -181,18 +188,41 @@
     "print('...done.')\n",
     "\n",
     "print('Creating indexes...')\n",
-    "sites.create_index('site_no')\n",
+    "#sites.create_index('site_no')\n",
     "measured.create_index('site_no')\n",
     "verified.create_index('site_no')\n",
     "print('...done.')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db['measured'].count()"
+   ]
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python3"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
@@ -204,7 +234,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
